# Final-Year-Project_Fidel-AI

./: .gitignore  README.MD  dev.sh  presentation.pptx.md
backend-api/: .gitignore  alembic.ini  database_schema.graphql  main.py  pyproject.toml
backend-api/alembic/: env.py
backend-api/alembic/versions/: 9ad080d98614_initial_migration.py
backend-api/app/: main.py
backend-api/app/config/: database.py  settings.py
backend-api/app/model/: __init__.py  attendance.py  base.py  batch.py  batch_community.py  batch_course.py  batch_enrollment.py  batch_instructor.py  certificate.py  comment_reaction.py  comment_reactions.py  community_attachment_file.py  community_attachment_files.py  community_comment.py  community_reaction.py  community_reactions.py  conversation_interactions.py  course.py  course_material.py  course_schedule.py  enums.py  feedback.py  free_conversation.py  interaction.py  interactions.py  lesson_interaction.py  lesson_interactions.py  lesson_online_article.py  lesson_online_articles.py  lesson_vocabularies.py  lesson_vocabulary.py  lesson_youtube_video.py  lesson_youtube_videos.py  listening_skill.py  material_file.py  material_files.py  models.py  module.py  module_lesson.py  module_lessons.py  (+18 more)
backend-api/app/resolver/: analytics.py  attendance.py  batch.py  batch_community.py  batch_course.py  batch_enrollment.py  batch_instructor.py  certificate.py  comment_reactions.py  community_attachment_files.py  community_comment.py  community_reactions.py  conversation_interactions.py  course.py  exam.py  (+24 more)
backend-api/tests/: __init__.py  conftest.py
(+249 files in other folders)
