[project]
name = "backend-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ariadne>=0.26.2",
    "fastapi>=0.128.0",
    "langchain>=1.2.4",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "pymysql>=1.1.0",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.40.0",
    "bcrypt==4.1.3",
    "duckduckgo-search>=8.1.1",
    "youtube-search>=2.2.0",
]
